[gd_scene load_steps=4 format=3 uid="uid://fysl1pydoba0"]

[ext_resource type="LabelSettings" uid="uid://b5ugeles5dpul" path="res://scenes/components/messaging_header.tres" id="1_6w7qv"]
[ext_resource type="Script" path="res://scenes/device/message_direct.gd" id="1_hwr5h"]
[ext_resource type="FontFile" uid="uid://br4ejhtxrx0vc" path="res://assets/font/cg pixel 4x5.ttf" id="2_6x0ut"]

[node name="MessageDirect" type="Control"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 66.0
offset_bottom = 24.0
script = ExtResource("1_hwr5h")

[node name="MessageHeader" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 66.0
offset_bottom = 7.0

[node name="MessageUser" type="Label" parent="MessageHeader"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
text = "areyouasd"
label_settings = ExtResource("1_6w7qv")
clip_text = true
text_overrun_behavior = 3

[node name="MessageNew" type="Label" parent="MessageHeader"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6x0ut")
theme_override_font_sizes/font_size = 5
text = "(!)"

[node name="MessageScroller" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(66, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MessageList" type="VBoxContainer" parent="MessageScroller"]
layout_mode = 2
